fixed text visibility on the home page

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    color: rgb(255, 255, 255);
+    color: rgb(110, 14, 73);
     text-decoration: none;
 }
 
